Finally fix for overflow space to right

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,10 @@ ul {
   .about-page__text {
     width: 30%;
     margin-right: 30rem; }
+    @media (max-width: 68.75em) {
+      .about-page__text {
+        width: 40%;
+        margin-right: 20rem; } }
   .about-page__photo {
     width: 25%;
     border-radius: 2px; }
@@ -104,7 +108,6 @@ ul {
       background-color: #7c203a; }
       .work-page__flex-grid .col a {
         height: 100%;
-        width: 100%;
         position: absolute; }
 
 .contact-page {
