--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -51,6 +51,20 @@
     &__text {
         width: 30%;
         margin-right: 30rem;
+
+        @include respond(tab-land) {
+            width: 40%;
+            margin-right: 20rem;
+
+        }
+
+        // @include respond(tab-port) {
+        //     font-size: 18rem;
+        // }
+
+        // @include respond(phone) {
+        //     font-size: 12rem;
+        // }
     }
 
     &__photo {
@@ -76,7 +90,6 @@
 
             & a {
                 height: 100%;
-                width: 100%;
                 position: absolute;
             }
         }
